--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
       <div class="card">
         <div class="card-label">▲ BOSS ▲</div>
         <div class="card-name">ボ　ス</div>
-        <div class="card-sub">最高指導者</div>
+        <div class="card-sub">樋口 和</div>
       </div>
     </div>
     <div style="display:flex;align-items:center;flex:0 0 170px;">
@@ -355,6 +355,7 @@
         <div class="card">
           <div class="card-label">CONSIGLIERE</div>
           <div class="card-name">顧　問</div>
+          <div class="card-sub">佐咲 こまち・海月 くらげ</div>
         </div>
       </div>
     </div>
@@ -367,7 +368,7 @@
     <div class="card">
       <div class="card-label">UNDERBOSS</div>
       <div class="card-name">アンダーボス</div>
-      <div class="card-sub">副頭領</div>
+      <div class="card-sub">空席</div>
     </div>
   </div>
 
@@ -378,6 +379,7 @@
     <div class="card">
       <div class="card-label">CAPO</div>
       <div class="card-name">幹　部</div>
+      <div class="card-sub">蒼葉 こはく・美味 魚毛</div>
     </div>
   </div>
 
@@ -388,6 +390,7 @@
     <div class="card">
       <div class="card-label">LUPO</div>
       <div class="card-name">構 成 員</div>
+      <div class="card-sub">バーバナーガ・夜霧 エム・田中 虎徹・街宮 あん</div>
     </div>
   </div>
 
@@ -398,6 +401,7 @@
     <div class="card">
       <div class="card-label">ASSOCIATE</div>
       <div class="card-name">準 構 成 員</div>
+      <div class="card-sub">ウッス カナーノ・Crazy is God・ぜろぶぅ・橘 りるく</div>
     </div>
   </div>
 
