--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
       <div class="tier-advisor">
         <div class="card">
           <div class="card-label">CONSIGLIERE</div>
-          <div class="card-name">顧　問</div>
+          <div class="card-name">コアメンバー(非所属)</div>
           <div class="card-sub">佐咲 こまち・海月 くらげ</div>
         </div>
       </div>
@@ -416,7 +416,7 @@
     <div class="card">
       <div class="card-label">ASSOCIATE</div>
       <div class="card-name">準 構 成 員</div>
-      <div class="card-sub">ウッス カナーノ・Crazy is God・ぜろぶぅ・橘 りるく</div>
+      <div class="card-sub">ウッス カナーノ・Crazy is God・ぜろぶぅ・橘 りる</div>
     </div>
   </div>
 
